--- a/Deployment.yaml
+++ b/Deployment.yaml
@@ -1,39 +1,33 @@
-apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
-kind: Deployment
-metadata:
-  name: ang11
-spec:
-  selector:
-    matchLabels:
-      app: ang11
-  replicas: 1 # tells deployment to run 1 pod matching the template
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2 
+kind: Deployment 
+metadata: 
+  name: angular-deployment 
+spec: 
+  selector: 
+    matchLabels: 
+      app: angular 
+  replicas: 5 # tells deployment to run 2 pods matching the template 
   template:
-    metadata:
-      labels:
-        app: ang11
-    spec:
-      containers:
-      - name: simpleapi
-        image: amk8acr.azurecr.io/cloudmustafaangulardocker:52
-        ports:
-        - containerPort: 80
-        resources:
-          limits:
-            cpu: "1"
-            memory: "200Mi"
-          requests:
-            cpu: "0.1"
-            memory: "100Mi"
----
-kind: Service
-apiVersion: v1
-metadata:
-  name: ang11
-spec:
-  selector:
-    app: ang11
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
+    metadata: 
+      labels: 
+        app: angular 
+    spec: 
+      containers: 
+      - name: angular 
+        image: demoacram.azurecr.io/myangular:v1
+        ports: 
+        - containerPort: 80 
+--- 
+# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service  
+kind: Service 
+apiVersion: v1 
+metadata: 
+  name: angular-service 
+spec: 
+  selector: 
+    app: angular 
+  ports: 
+  - protocol: TCP 
+    port: 80 
+    targetPort: 80 
   type: LoadBalancer
