--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -39,7 +39,7 @@ stages:
           $(tag)
     - task: CopyFiles@2
       inputs:
-        Contents: 'Deployment.yaml'
+        Contents: '**'
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
     - task: PublishBuildArtifacts@1
       inputs:
