--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -29,15 +29,11 @@ stages:
       vmImage: $(vmImageName)
     steps:
     - task: Docker@2
-      displayName: Build and push an image to container registry
       inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
-
+        containerRegistry: 'DemoAcram'
+        repository: 'myangular'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
     - task: CopyFiles@2
       inputs:
         Contents: '**'
