--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,14 +29,11 @@ stages:
       vmImage: $(vmImageName)
     steps:
     - task: Docker@2
-      displayName: Build and push an image to container registry
       inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+        containerRegistry: 'DemoAcram'
+        repository: 'myangular'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
     - task: HelmInstaller@1
       displayName: 'install helm'
       inputs:
